--- a/RemoteRelay/RemoteRelay.csproj
+++ b/RemoteRelay/RemoteRelay.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
         <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -10,15 +10,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.1.4"/>
-        <PackageReference Include="Avalonia.Desktop" Version="11.1.4"/>
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.1.4"/>
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.4"/>
-        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.4"/>
+        <PackageReference Include="Avalonia" Version="11.2.0" />
+        <PackageReference Include="Avalonia.Desktop" Version="11.2.0" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.0" />
+        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.0" />
+        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.0" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.4"/>
-        <PackageReference Include="System.Device.Gpio" Version="3.2.0"/>
-        <PackageReference Include="System.Net.Sockets" Version="4.3.0"/>
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.0" />
+        <PackageReference Include="Live.Avalonia" Version="1.4.1" />
+        <PackageReference Include="System.Device.Gpio" Version="3.2.0" />
+        <PackageReference Include="System.Net.Sockets" Version="4.3.0" />
     </ItemGroup>
 
     <ItemGroup>
