--- a/RemoteRelay/RemoteRelay.csproj
+++ b/RemoteRelay/RemoteRelay.csproj
@@ -10,16 +10,21 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Avalonia" Version="11.2.1" />
-        <PackageReference Include="Avalonia.Desktop" Version="11.2.1" />
-        <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.1" />
-        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.1" />
-        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.1" />
+        <PackageReference Include="Avalonia" Version="11.2.4" />
+        <PackageReference Include="Avalonia.Desktop" Version="11.2.4" />
+        <PackageReference Include="Avalonia.ReactiveUI" Version="11.2.4" />
+        <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.4" />
+        <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.4" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.1" />
+        <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.4" />
         <PackageReference Include="Live.Avalonia" Version="1.4.1" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.2" />
         <PackageReference Include="System.Device.Gpio" Version="3.2.0" />
         <PackageReference Include="System.Net.Sockets" Version="4.3.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\RemoteRelay.Common\RemoteRelay.Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
