Countdown timer and various observable tweaks

--- a/RemoteRelay/config.json
+++ b/RemoteRelay/config.json
@@ -3,26 +3,26 @@
     {
       "SourceName": "Studio 1",
       "OutputName": "Newsroom 1",
-      "RelayPin": 17
+      "RelayPin": 26
     },
     {
       "SourceName": "Studio 2",
       "OutputName": "Newsroom 1",
-      "RelayPin": 18
+      "RelayPin": 20
     },
     {
       "SourceName": "Automation",
       "OutputName": "Newsroom 1",
-      "RelayPin": 19
+      "RelayPin": 21
     }
   ],
   "DefaultSource": "Studio 1",
   "PhysicalSourceButtons": {
-    "Studio 1": 27,
-    "Studio 2": 22
+    "Studio 1": 10,
+    "Studio 2": 9
   },
-  "ServerName": "localhost",
-  "IsServer": true,
+  "ServerName": "switcher-server",
+  "IsServer": false,
   "Port": 58126,
   "FlashOnSelect": true,
   "ShowIpOnScreen": true,
