--- a/RemoteRelay.Server/RemoteRelay.Server.csproj
+++ b/RemoteRelay.Server/RemoteRelay.Server.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+  <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
     <PackageReference Include="System.Device.Gpio" Version="4.0.1" />
   </ItemGroup>
 
