--- a/RemoteRelay/RemoteRelay.csproj
+++ b/RemoteRelay/RemoteRelay.csproj
@@ -31,5 +31,8 @@
       <None Update="ServerDetails.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="ClientConfig.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 </Project>
