--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -35,9 +35,7 @@ jobs:
         dotnet publish RemoteRelay.Server/RemoteRelay.Server.csproj \
           --configuration Release \
           --runtime linux-arm64 \
-          --self-contained true \
-          -p:PublishSingleFile=true \
-          -p:PublishTrimmed=false \
+          -p:PublishProfile=LinuxSelfContained \
           -o ./publish/server-linux-arm64
 
     # ======== Server Build (linux-arm) ========
@@ -46,9 +44,7 @@ jobs:
         dotnet publish RemoteRelay.Server/RemoteRelay.Server.csproj \
           --configuration Release \
           --runtime linux-arm \
-          --self-contained true \
-          -p:PublishSingleFile=true \
-          -p:PublishTrimmed=false \
+          -p:PublishProfile=LinuxSelfContained \
           -o ./publish/server-linux-arm
 
     # ======== Client Builds (multi-platform) ========
@@ -77,9 +73,7 @@ jobs:
         dotnet publish RemoteRelay/RemoteRelay.csproj \
           --configuration Release \
           --runtime linux-arm64 \
-          --self-contained true \
-          -p:PublishSingleFile=true \
-          -p:PublishTrimmed=false \
+          -p:PublishProfile=LinuxSelfContained \
           -o ./publish/client-linux-arm64
 
     - name: Publish Client - linux-arm
@@ -87,9 +81,7 @@ jobs:
         dotnet publish RemoteRelay/RemoteRelay.csproj \
           --configuration Release \
           --runtime linux-arm \
-          --self-contained true \
-          -p:PublishSingleFile=true \
-          -p:PublishTrimmed=false \
+          -p:PublishProfile=LinuxSelfContained \
           -o ./publish/client-linux-arm
 
     # ======== Upload Artifacts ========
