--- a/RemoteRelay.Server/RemoteRelay.Server.csproj
+++ b/RemoteRelay.Server/RemoteRelay.Server.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+  <PackageReference Include="Makaretu.Dns.Multicast" Version="0.27.0" />
   <PackageReference Include="SixLabors.ImageSharp" Version="3.1.12" />
     <PackageReference Include="System.Device.Gpio" Version="4.0.1" />
+    <PackageReference Include="Zeroconf" Version="3.7.16" />
   </ItemGroup>
 
   <ItemGroup>
